FreedomSanboxAntDeploy/src/objects/Approve_Action_Plan__c.object
<CustomObject>
    <description>Created for new action plan</description>
    <fields>
        <fullName>AP_Status__c</fullName>
        <label>AP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Opened</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Approve Action Plans</relationshipLabel>
        <relationshipName>Approve_Action_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Action_Amount__c</fullName>
        <label>Action Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Per_Installment__c</fullName>
        <label>Amount Per Installment</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBI Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Gains Tax Saving Bonds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Convertible Debentures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Index</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Diversified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Large Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Mid Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Small Cap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity - Sectoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Long Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt - Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Arbitrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Asset Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Debt Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid - Monthly Income</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Name__c</fullName>
        <label>Asset Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bond_Type__c</fullName>
        <label>Bond Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Product_Manufacturer_Master__c</referenceTo>
        <relationshipLabel>Approve Action Plans</relationshipLabel>
        <relationshipName>Approve_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_SIP__c</fullName>
        <label>Current SIP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GS_Action_Amount__c</fullName>
        <label>GS Action Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_Amount__c</fullName>
        <label>GS Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GS_LumpsumRemark__c</fullName>
        <label>GS_LumpsumRemark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GS_SIPRemark__c</fullName>
        <label>GS_SIPRemark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GS_SIP_Action_Amount__c</fullName>
        <label>GS_SIP_Action_Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Approve Action Plans</relationshipLabel>
        <relationshipName>Approve_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installments__c</fullName>
        <label>Installments</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InsuranceRemark__c</fullName>
        <label>InsuranceRemark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insurance</label>
        <referenceTo>Insurance__c</referenceTo>
        <relationshipLabel>Approve Action Plans</relationshipLabel>
        <relationshipName>Approve_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <label>Insured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investment_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment Asset</label>
        <referenceTo>Investment_Asset__c</referenceTo>
        <relationshipLabel>Approve Action Plans</relationshipLabel>
        <relationshipName>Approve_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <picklist>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surrender Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bond</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lumpsum_Action__c</fullName>
        <label>Lumpsum Action</label>
        <picklist>
            <picklistValues>
                <fullName>Hold - Change of broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redeem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP From</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lumpsum_Debt__c</fullName>
        <description>Created for storing &quot;Emergency Fund&quot; lumpsum details</description>
        <label>Lumpsum Debt</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lumpsum_Equity__c</fullName>
        <description>Created for storing &quot;Emergency Fund&quot; lumpsum details</description>
        <label>Lumpsum Equity</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lumpsum_Gold__c</fullName>
        <description>Created for storing &quot;Emergency Fund&quot; lumpsum details</description>
        <label>Lumpsum Gold</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MF_LumpsumRemark__c</fullName>
        <label>MF LumpsumRemark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MF_SIPRemark__c</fullName>
        <label>MF SIPRemark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Products__c</fullName>
        <label>Multiple Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Payout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Period_in_Months__c</fullName>
        <label>Period in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <label>Policy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premium_Amount_Rs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Premium Amount (Rs.)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Approve Action Plans</relationshipLabel>
        <relationshipName>Approve_Action_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RT_InsuranceRemark__c</fullName>
        <label>RT_InsuranceRemark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RT_LIRemark__c</fullName>
        <label>RT LIRemark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RT_LumpsumRemark__c</fullName>
        <label>RT LumpsumRemark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RT_SIPRemark__c</fullName>
        <label>RT SIPRemark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIP_Action_Amount__c</fullName>
        <label>SIP Action Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIP_Action__c</fullName>
        <label>SIP Action</label>
        <picklist>
            <picklistValues>
                <fullName>Stop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing SIP - COB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Scheme_Name__c</fullName>
        <label>Scheme Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suggested_Cover__c</fullName>
        <label>Suggested Cover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Suggested_LumpSum_Action__c</fullName>
        <label>Suggested LumpSum Action</label>
        <picklist>
            <picklistValues>
                <fullName>STP To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP From</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum_Assured_Rs__c</fullName>
        <label>Sum Assured (Rs.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tenure_of_Insurance__c</fullName>
        <label>Tenure of Insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Existing SIP- COB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP From</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold - COB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STP To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch From</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switch To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing SIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnAllocated_Assets_Remark__c</fullName>
        <label>UnAllocated Assets Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isAddOnExecutionTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAddOnExecutionTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isETcreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isETcreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExecutionTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isExecutionTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGSETcreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGSETcreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGS_ExecutionTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGS_ExecutionTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGSsipETCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGSsipETCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGSsip_ExecutionTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGSsip_ExecutionTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInsuranceExecutionTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isInsuranceExecutionTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLumpsumExecTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLumpsumExecTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isMFsipETCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isMFsipETCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNewGoldSilver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if records of Gold and silver are newly added in Action plan.</description>
        <label>isNewGoldSilver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNewLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNewLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNewMutualFund__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNewMutualFund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSIPexecutionTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSIPexecutionTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUnallocatedRemark__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUnallocatedRemark</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWillExecTracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWillExecTracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isWill_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isWill</label>
        <type>Checkbox</type>
    </fields>
    <label>Approve Action Plan</label>
    <nameField>
        <displayFormat>AP-{0000000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approve Action Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>